# mava-exchange

./: .gitignore  .pre-commit-config.yaml  AI_READINESS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE.md  README.md  code-of-conduct.md  development-guide.md  justfile  pyproject.toml
.claude/commands/: add-track-type.md  check-spec-compliance.md
.claude/handoffs/: v0.2-spec-and-validation.md
.claude/prd/: 00-overview.md  01-data-analysis.md  02-roadmap.md  03-spike-next-steps.md  04-spike-faces-to-people.md
.github/: pull_request_template.md
.github/workflows/: docs.yaml  normal.yaml
data/: README.md
docs/: conf.py  index.md  ontology.md  specification.md  tutorial.md  viewer.md
docs/_static/: styles.css
docs/_static/pylode/: mava.html
docs/_static/viewer-app/: README.md  index.html  styles.css  viewer.js
docs/_templates/: mava.html  viewer.html
docs/ontology/: ontology.md
docs/reference-guide/: cli.md  index.md  reader.md  tracks.md  validate.md  writer.md
docs/spec/: specification.md
docs/tools/: viewer.md
docs/tutorial/: getting-started.md
examples/: README.md
examples/input/silent_child/: face_regions.tsv  joanne.tsv  paul.tsv  shots.tsv  tracks.yml  video.yml
examples/input/tagesschau/: anchor_daubner.tsv  angry.tsv  close_up.tsv  disgust.tsv  dominant_colors.tsv  extreme_close_up.tsv  face_emotions.tsv  fear.tsv  full_shot.tsv  happy.tsv  long_shot.tsv  medium_shot.tsv  neutral.tsv  rms_volume.tsv  sad.tsv  shot_density.tsv  shot_sizes.tsv  shots.tsv  shots_modified.tsv  surprise.tsv  tracks.yml  video.yml  video_brightness.tsv  whisper_transcript.tsv
examples/input/video_001/: Angry.tsv  Disgust.tsv  Fear.tsv  Happy.tsv  Neutral.tsv  Surprise.tsv  Whisper Transcript.tsv  scene_tags.tsv
examples/input/video_002/: Dominant Color(s).tsv  RMS Volume.tsv
examples/output/: corpus.mediapkg
examples/output/inspect/: corpus.mediapkg.jsonld  corpus.mediapkg.ttl
examples/script/: tsv_to_mediapkg.py
examples/scripts/: build_mediapkg.py  tsv_to_mediapkg.py
examples/video_001/: Face Emotions.tsv  Sad.tsv  Shots.tsv
examples/video_002/: Shots.tsv
spec/: .gitignore  SPEC.md  mava.shacl.ttl  mava.ttl
src/mava_exchange/: __init__.py  cli.py  rdf.py  reader.py  tracks.py  validate.py  writer.py
tests/: conftest.py  test_annotation_list_series.py  test_cli.py  test_rdf.py  test_reader.py  test_region_series.py  test_roundtrip.py  test_tracks.py  test_validate.py  test_version.py  test_writer.py
tools/configs/copier/answers/: generic.yaml  python.yaml
tools/configs/git-cliff/: config.toml
tools/just/: examples.just
tools/nix/: flake.nix
tools/nix/toolchains/: toolchain-general.nix  toolchain-python.nix
tools/scripts/: cut_clips.py  extract_segment.py  setup-config-files.sh
viewer/: README.md  index.html  styles.css  viewer.js
