[project]
name = "mava-exchange"
authors = [
  { name = "Stefan Milosavljevic", email = "stefan.milosavljevic@sdsc.ethz.ch" },
  { name = "Sabine Maennel", email = "sabine.maennel@sdsc.ethz.ch" },
]
description = "this an agent based compliance solution"
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.1"

dependencies = [
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
]
[dependency-groups]
dev = [
    "notebook>=7.3.2",
    "ruff>=0.15.1",
    "pytest>=8.4.2",
    "pylode>=3.2.3",
]

[project.scripts]
mediapkg-inspect  = "mava_exchange.cli:inspect_cmd"
mediapkg-validate = "mava_exchange.cli:validate_cmd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    ".direnv",
    ".devenv",
    ".output",
]

[tool.ruff]
extend-include = ["*.ipynb"]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "W605",   # pycodestyle: invalid-escape-sequence
    "S102",   # flake8-bandit: exec-builtin
    "INP",    # flake8-no-pep420
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "NPY",    # NumPy-specific rules
    "RUF",    # Ruff-specific rules
]
ignore = [
    "NPY002", # numpy-legacy-random
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["INP001", "PLR2004", "PLR0913", "PT012"]
"examples/*" = ["INP001"]
"[!t][!e][!s][!t][!s]*/**" = ["PT"]
