[project]
name = "mava-exchange"
authors = [
  { name = "Swiss Data Science Center", email = "contact@datascience.ch" },
]

description = "A lightweight interchange format for video annotations"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.1"
license = {text = "Apache-2.0"}
keywords = ["video", "annotations", "parquet", "semantic-web"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
    "rdflib>=7.0",
]

[project.scripts]
mediapkg-inspect  = "mava_exchange.cli:inspect_cmd"
mediapkg-validate = "mava_exchange.cli:validate_cmd"

[project.optional-dependencies]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
]

[project.urls]
Homepage = "https://github.com/sdsc-ordes/mava-exchange"
Documentation = "https://sdsc-ordes.github.io/mava-exchange/"
Repository = "https://github.com/sdsc-ordes/mava-exchange"
"Bug Tracker" = "https://github.com/sdsc-ordes/mava-exchange/issues"
Changelog = "https://github.com/sdsc-ordes/mava-exchange/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "notebook>=7.3.2",
    "ruff>=0.15.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.0",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "pip-audit>=2.0",
    "pylode>=3.2.3",
    "sphinx-autodoc-typehints>=3.9.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    ".direnv",
    ".devenv",
    ".output",
]

[tool.ruff]
extend-include = ["*.ipynb"]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "W605",   # pycodestyle: invalid-escape-sequence
    "S",      # flake8-bandit: security checks
    "INP",    # flake8-no-pep420
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "NPY",    # NumPy-specific rules
    "RUF",    # Ruff-specific rules
]
ignore = [
    "NPY002", # numpy-legacy-random
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["INP001", "PLR2004", "PLR0913", "PT012", "S101"]
"examples/*" = ["INP001"]
"tools/**" = ["INP001"]
"[!t][!e][!s][!t][!s]*/**" = ["PT"]
"docs/*" = ["INP001"]
# assert used only for mypy type-narrowing after guards that already raise
"src/mava_exchange/reader.py" = ["S101"]

[tool.coverage.run]
source = ["mava_exchange"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
packages = ["mava_exchange"]
python_version = "3.12"
# pandas and pyarrow ship without py.typed markers; ignore missing stubs for them.
ignore_missing_imports = true
# Catch type errors in already-annotated code without requiring 100% annotation coverage.
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.hypothesis]
suppress_health_check = ["too_slow", "data_too_large"]
